<resources>
    <string name="app_name">Ayurveda Quiz</string>
    <string name="option_a">Option 1</string>
    <string name="option_b">Option 2</string>
    <string name="option_c">Option 3</string>
    <string name="questionNoString">Question: 1/x</string>
    <string name="headingString">Prakruthi Questionnaire</string>
    <string name="nextButtonString">Next</string>
    <string name="backButtonString">Back</string>
    <string name="startQuizString">Start Quiz</string>
    <string name="register_description">Register below to start the quiz.</string>
    <string name="passwordStr">Password</string>
    <string name="overwriteWarningStr">(If you have already taken the quiz, then taking it again will overwrite previous result)</string>
</resources>
